# EngineOpenGL

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
resources/models/: third.gltf
resources/models/goblin/: goblin.gltf
resources/models/hey/: hey.gltf
resources/models/los/: Los.gltf
resources/models/los2/: Los2.gltf
resources/models/plane/: plane.mtl  plane10.mtl  plane11.mtl  plane3.mtl  texture.png~
resources/models/sword/: scene.gltf
resources/models/tree/: tree.gltf
resources/shaders/: MultiTextureFragmentShader.glsl  MultiTextureSecondFragmentShader.glsl  TestFragmentShader.glsl  TestVertexShader.glsl
resources/shaders/envMapping/: EnvMapFragmentShader.glsl  RefractionFragmentShader.glsl  RefractionVertexShader.glsl
resources/shaders/particles/: ParticleComputeShader.glsl  ParticleComputeShader2.glsl  ParticleFragmentShader.glsl  (+1 more)
src/: main.cpp
src/components/: Components.h
src/core/: Camera.cpp  Camera.h  Engine.cpp  Engine.h  Helpers.h  KeyCodes.h  Log.h  LogManager.cpp  LogManager.h  MouseCodes.h  Random.cpp  Random.h  Scene.h  SceneManager.cpp  SceneManager.h  Types.h  Window.cpp  Window.h
src/ecs/: Component.h  ComponentArray.h  ComponentContainer.h  Entity.h  EntityContainer.h  EntitySystemManager.h  System.h  SystemManager.h
src/events/: EngineEvents.h  Event.h  KeyEvents.h  MouseEvents.h
src/input/: Input.cpp  Input.h
src/objects/: Player.cpp  Player.h
src/particles/: Emitter.cpp  Emitter.h  FogEmitter.cpp  FogEmitter.h  Particle.h  PointEmitter.cpp  PointEmitter.h  RainEmitter.cpp  RainEmitter.h  Random.h  SmokeEmitter.cpp  SmokeEmitter.h
src/physics/: ColisionDetection.cpp  ColisionDetection.h
src/primitives/: Cube.h  Grid.h  Sphere.h
src/renderer/: CubeMap.cpp  CubeMap.h  FrameBuffer.cpp  FrameBuffer.h  IndexBuffer.cpp  IndexBuffer.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.h
src/scenes/: EditorScene.cpp  EditorScene.h  GPUParticlesScene.cpp  GPUParticlesScene.h  LabScene.cpp  LabScene.h  LightTestingScene.cpp  LightTestingScene.h  TestScene.cpp  TestScene.h  WaveSurfaceScene.cpp  WaveSurfaceScene.h
src/systems/: ParticleSystem.cpp  ParticleSystem.h  PhysicsSystem.cpp  PhysicsSystem.h
(+37 files in other folders)
